# TspSolverLib

./: .gitignore  CMakeLists.txt  README.md
TspSolverLib/: CMakeLists.txt  TspSolverLib.pro  tspsolverlib.cpp
TspSolverLib/include/: blockingqueue.h  branchandbound.h  matrix.h  tspsolverlib.h
TspSolverLib/src/: CMakeLists.txt  blockingqueue.h  branchandbound.h  matrix.h  matrixindiceswrapper.h  node.h  staticthreadpool.h  tspsolverlib.h
TspSolverLib/src/bb/: branchandbound.h  common.h  node.h  path.h
TspSolverLib/src/ga/: common.h  crossovers.h  ga.h  individual.h  mutations.h  selectors.h  statistic.h
TspSolverLib/src/threading/: blockingqueue.h  staticthreadpool.h
TspSolverLib/tst/: CMakeLists.txt  main.cpp
TspSolverLib/tst/bb/: branchingtst.cpp  getminexcepttst.cpp  penaltiestst.cpp  performancetst.cpp  performancetst.h  reducematrixtst.cpp  reduceplainarraytst.cpp  solvertst.cpp
TspSolverLib/tst/ga/: crossoverstst.cpp  gatst.cpp
TspSolverLib/tst/matrix/: matrixtst.cpp
